Add business layer

--- a/BugTracker.Web/Dockerfile
+++ b/BugTracker.Web/Dockerfile
@@ -1,31 +1,36 @@
-﻿FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+﻿# Stage 1: Build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
+# Copy editorconfig (to apply style rules)
 COPY .editorconfig ./
 
 # Copy solution and project files
 COPY BugTracker.sln ./
-COPY BugTracker.Data/*.csproj ./BugTracker.Data/
-COPY BugTracker.Web/*.csproj ./BugTracker.Web/
+COPY BugTracker.Data/*.csproj BugTracker.Data/
+COPY BugTracker.Business/*.csproj BugTracker.Business/
+COPY BugTracker.Web/*.csproj BugTracker.Web/
 
-# Restore (editorconfig đã ở đây, warning rules sẽ apply)
-RUN dotnet restore "./BugTracker.Web/BugTracker.Web.csproj"
+# Restore dependencies for Web project (pulls in Data & Business)
+RUN dotnet restore "BugTracker.Web/BugTracker.Web.csproj"
 
 # Copy source code
-COPY BugTracker.Data/. ./BugTracker.Data/
-COPY BugTracker.Web/. ./BugTracker.Web/
+COPY BugTracker.Data/. BugTracker.Data/
+COPY BugTracker.Business/. BugTracker.Business/
+COPY BugTracker.Web/. BugTracker.Web/
 
-# Clean up old artifacts
+# Clean old build artifacts
 RUN rm -rf BugTracker.Data/bin BugTracker.Data/obj \
+           BugTracker.Business/bin BugTracker.Business/obj \
            BugTracker.Web/bin  BugTracker.Web/obj
 
-# Publish
+# Publish Web project
 WORKDIR /src/BugTracker.Web
 RUN dotnet publish "BugTracker.Web.csproj" -c Release -o /app/publish
 
-# Runtime image
+# Stage 2: Runtime
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/publish .
 EXPOSE 80
-ENTRYPOINT ["dotnet","BugTracker.Web.dll"]
+ENTRYPOINT ["dotnet", "BugTracker.Web.dll"]
