--- a/BugTracker.Web/appsettings.Development.json
+++ b/BugTracker.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=mysql;Port=3306;Database=bugtrackingdb;User=root;Password=password;"
+    "DefaultConnection": "server=localhost;Port=3306;Database=bugtrackingdb;User=root;Password=password;"
   },
   "Logging": {
     "LogLevel": {
