Add automation tests

--- a/BugTracker.Data/BugTracker.Data.csproj
+++ b/BugTracker.Data/BugTracker.Data.csproj
@@ -25,4 +25,12 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Remove="C:\Users\TVN-SDC1-LAP-68\AppData\Roaming\SonarLint for Visual Studio\.global\csharp\SonarLint.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Remove="C:\Users\TVN-SDC1-LAP-68\AppData\Roaming\SonarLint for Visual Studio\.global\csharp\SonarLint.xml" />
+  </ItemGroup>
+
 </Project>
