--- a/BugTracker.Web/BugTracker.Web.csproj
+++ b/BugTracker.Web/BugTracker.Web.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+        <_Parameter1>BugTracker.IntegrationTests</_Parameter1>
+    </AssemblyAttribute>
+ </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
